--- a/website/static/index.html
+++ b/website/static/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
       window.location.href = 'docs/intro.html';
     </script>
-    <title>IOV Documentations</title>
+    <title>IOV Documentation</title>
   </head>
   <body>
     If you are not redirected automatically, follow this <a href="docs/intro.html">link</a>.
